--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "gemserv"
-version = "0.6.6"
-authors = ["int 80h <int@80h.dev>"]
+version = "0.6.7"
+authors = ["Calacuda <eowest@gmail.com>"]
 edition = "2018"
 description = "A gemini server"
 keywords = ["server", "gemini", "protocol"]
 categories = ["network-programming"]
-readme = "README"
-homepage = "https://sr.ht/~int80h/gemserv/"
-repository = "https://git.sr.ht/~int80h/gemserv"
+readme = "README.md"
+homepage = "https://github.com/calacuda/gemserv"
+repository = "https://github.com/calacuda/gemserv.git"
 license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
