--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,4 +17,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build
-      run: cargo check --verbose
+      run: cargo check
+      # - name: Run tests
+      #   run: cargo test
+      # - name: Run Clippy
+      #   run: cargo clippy
