--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,7 @@ jobs:
       #   run: cargo clippy
       - name: Run Build
         run: cargo build --release
-      - uses: actions/checkout@v3
-      - name: get version
+      - name: version
         run: echo "::set-output name=version::$(cat 'Cargo.toml' | rg 'version' | head -n 1 | cut -d '\"' -f 2)"
         id: version
       - name: make release
@@ -36,7 +35,7 @@ jobs:
           draft: false
           prerelease: false
           release_name: v${{ steps.version.outputs.version }}
-          tag_name: ${{ github.ref }}
+          tag_name: v${{ steps.version.outputs.version }}
           body_path: CHANGELOG.md
         env:
           GITHUB_TOKEN: ${{ github.token }}
