--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Run Build
         run: cargo build --release
       - name: version
-        run: echo "::set-output name=version::$(cat 'Cargo.toml' | rg 'version' | head -n 1 | cut -d '\"' -f 2)"
+        run: echo ::set-output name=version::$(cat 'Cargo.toml' | grep 'version' | head -n 1 | cut -d '"' -f 2)
         id: version
       - name: make release
         uses: actions/create-release@v1
@@ -34,7 +34,7 @@ jobs:
         with:
           draft: false
           prerelease: false
-          release_name: v${{ steps.version.outputs.version }}
+          release_name: v-${{ steps.version.outputs.version }}
           tag_name: v${{ steps.version.outputs.version }}
           body_path: CHANGELOG.md
         env:
