--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Run Check
-        run: cargo check
+        run: cargo check --bins
       # - name: Run tests
       #   run: cargo test
       # - name: Run Clippy
@@ -34,7 +34,7 @@ jobs:
         with:
           draft: false
           prerelease: false
-          release_name: v-${{ steps.version.outputs.version }}
+          release_name: v${{ steps.version.outputs.version }}
           tag_name: v${{ steps.version.outputs.version }}
           body_path: CHANGELOG.md
         env:
