--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build
-      run: cargo check
+      run: cargo check --bins
       # - name: Run tests
       #   run: cargo test
       # - name: Run Clippy
